[B]1.0.9[/B]
- [WIP] Added Country Age Ratings
- Added User Select Submenu Items

[B]1.0.8[/B]
- Added User Choice Widgets on Home Screen
- Added User Choice Addon Sets on Home Menu
- Added Option for ReSet Skin Settings
- Bugfix Submenu Item Backgrounds
- Bugfix Viz Condition Next 5 Scroller
- Added Music Viz Backgrounds to Home Screen
- Added Toggles for Up One Level, Next5Songs, Clock, System Menu
- Updated Mod Icon
- Updated Language Files
- Removed Artist CD Thumbnails from Artist Bio

[B]1.0.7[/B]
- Added Preset Menu Items
- Added Submenu Set Choices
- Added Subtitle Flag Option
- Added Individual Genre Icons
- Added TVBaners to MediaInfo 3
- Added Next 5 Song Scroller
- Added Traditional CD Case & Art Option
- BugFix Service.Skin.Widgets getting turned off
- BugFix Zorder & Viz Condition Artwork Downloader

[B]1.0.6[/B]
- Added Option to Hide Episode Thumbnails
- Removed SideMenu Help Not Needed as Mod of skin
- Added InProgress Banner to Poster View
- Added TVSHows In Progress to Submenu
- Added Original MPAA Ratings
- Added 3D Video Hack Icon
- Added Artwork Downloader to VideoInfo

[B]1.0.5[/B]
- Bugfix missing label2 FileList non Video
- Added Repeat/Shuffle Labels to Music Viz
- Added XBMC Intro Movie Option
- Added No OSD Video on Pause Option
- Added Skin Settings Option to Configure service.skin.widgets
- Added Old Style Confluence Video Player Condition Images & Changed Locations
- Added New Initial Setup Home Menu Items
- Add ClearArt Option to TVShows MediaInfo2 View
- Enable MusicVideos to Use Movie Views
- Replace Music SubMenu Songs with PartyMode

[B]1.0.4[/B]
- Added Requirement service.skin.widgets
- Add option for Random/Suggested items to Home Widget
- Updated language files from Transifex
- Bugfix added return to video playlist command
- Returned Hard Floor Image to all screens except Home
- Add Option to Auto Hide Home Submenus
- Add Option to Hide System Power Button
- Added User Watched/New Banner Option to Poster View