@@ -1,6 +1,13 @@
+[B]1.1.0[/B]
+-Added New Defaults for Menu Background Images
+-Added Media Panel Transparency
+-Added Option to Lower Menu Bar
+-Added Support script.simpleplaylists
+
 [B]1.0.9[/B]
 - [WIP] Added Country Age Ratings
 - Added User Select Submenu Items
+- Updated language files from Transifex
 
 [B]1.0.8[/B]
 - Added User Choice Widgets on Home Screen
